--- a/projects/project_2_3/wechat-example/img2img/app.json
+++ b/projects/project_2_3/wechat-example/img2img/app.json
@@ -5,7 +5,7 @@
   ],
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "图生图-黏土风格",
+    "navigationBarTitleText": "课2-3：粘土风滤镜",
     "navigationBarBackgroundColor": "#ffffff"
   },
   "style": "v2",
